--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,3 +1,3 @@
  <footer>
-            <p>Copyright {{getCurrentYear}}</p>
+            <p>Created by Darren Arcangel - Copyright {{getCurrentYear}}</p>
         </footer>
